--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,36 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  background-color: #282c34;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.barLeft {
+  display: flex;
+  width: 150px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+
+.barRight {
+  display: flex;
+  width: 150px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.dnaGrid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
